--- a/anonymessage/templates/dashboard.html
+++ b/anonymessage/templates/dashboard.html
@@ -27,7 +27,7 @@
             </div>
             <hr>
             <span class="title" style="font-size:20px;">My Recent Messages</span>
-            {% if messages.count > 0 %}
+            {% if messages %}
                 {% for message in messages %}
                     <div class="message-card shadow-sm col-md-12 mx-0 my-2">
                         <div class="card-header">{{ message.date_posted }}</div>
@@ -40,21 +40,21 @@
                 {% if messages.has_other_pages %}
                 <ul class="pagination">
                     {% if messages.has_previous %}
-                    <li><a href="?page={{ messages.previous_page_number }}">&laquo;</a></li>
+                    <li class="page-item"><a class="page-link" href="?page={{ messages.previous_page_number }}">&laquo;</a></li>
                     {% else %}
-                    <li class="disabled"><span>&laquo;</span></li>
+                    <li class="page-item disabled"><a class="page-link">&laquo;</a></li>
                     {% endif %}
                     {% for i in messages.paginator.page_range %}
                     {% if messages.number == i %}
-                        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                        <li class="page-item active"><a class="page-link">{{ i }} <span class="sr-only">(current)</span></a></li>
                     {% else %}
-                        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
                     {% endif %}
                     {% endfor %}
                     {% if messages.has_next %}
-                    <li><a href="?page={{ messages.next_page_number }}">&raquo;</a></li>
+                    <li class="page-item"><a class="page-link" href="?page={{ messages.next_page_number }}">&raquo;</a></li>
                     {% else %}
-                    <li class="disabled"><span>&raquo;</span></li>
+                    <li class="page-item disabled"><a class="page-link">&raquo;</a></li>
                     {% endif %}
                 </ul>
                 {% endif %}
